--- a/assets/css/aaron.css
+++ b/assets/css/aaron.css
@@ -22,7 +22,6 @@
         left: 50px 
       }
       
-
       .aaron .aarontext::after {
         content: "";
         position: absolute;
@@ -34,10 +33,15 @@
         border-color: var(--button) transparent transparent transparent;
       }
 
-
-
       /* Show the tooltip text when you mouse over the tooltip container */
       .aaron:hover .aarontext {
         visibility: visible;
       }
-  
+
+    /* HTML FOR AARON
+    <section class="aaron">
+    <img id="aaron-image" src="./assets/images/Aaron.png" alt="Cartoon image of Aaron Raikes">
+    <span class="aarontext">Thanks for checking out my Password Generator. I hope you find it userful.
+    </span>
+    </section>
+    */
